# Lyceum-App

./: .gitattributes  .gitignore  CLAUDE.md  PLAN.md  QUESTIONS-FOR-REVIEW.md  README.md  SESSION-HANDOFF.md  package-lock.json  package.json
app/: .gitignore  .npmrc  Cargo.toml  index.html  package.json  pnpm-lock.yaml  rust-toolchain.toml  tsconfig.json  vite.config.ts
app/crates/lyceum-core/: Cargo.toml
app/crates/lyceum-core/examples/: gen_golden.rs
app/crates/lyceum-core/src/: analytics.rs  concurrency.rs  date.rs  error.rs  ids.rs  lib.rs  mastery.rs  model.rs  placement.rs  progress.rs  routing.rs  srs.rs  store.rs  streak.rs  summary.rs  test_support.rs  validate.rs
app/crates/lyceum-engine/: Cargo.toml
app/crates/lyceum-engine/src/: error.rs  events.rs  lib.rs  orchestrate.rs  protocol.rs  session.rs  spawn.rs  workspace.rs
app/crates/lyceum-engine/tests/: live_bridge.rs  live_orchestrate.rs  vertical_slice.rs
app/scripts/: make-icon.cjs
app/src/: App.tsx  main.tsx
app/src-tauri/: Cargo.toml  tauri.conf.json
app/src-tauri/capabilities/: default.json
app/src-tauri/icons/: icon.icns
app/src-tauri/src/: commands.rs  delete.rs  engine_cmds.rs  error.rs  lib.rs  main.rs  notebook.rs  notebook_assist.rs  notebook_cards.rs  prompts.rs  service.rs  state.rs  submit.rs  tutor.rs  workspace.rs
app/src-tauri/tests/: skill_contract.rs
app/src/components/: AppShell.tsx  AppSidebar.tsx  ArtifactView.tsx  Breadcrumb.tsx  CommandPalette.tsx  ConfirmDestructive.tsx  CreationProgress.tsx  LessonImg.tsx  LessonRail.tsx  MasteryHeatmap.tsx  MasteryMeter.tsx  MasteryRing.tsx  MasterySeal.tsx  MermaidDiagram.tsx  NotebookAssist.tsx  NotebookReview.tsx  PlacementFeedback.tsx  PreflightGate.tsx  RemediationNotice.tsx  ResumeHero.tsx  ReviewCard.tsx  ReviewDueCard.tsx  RichMarkdown.tsx  SectionDivider.tsx  SessionConsole.tsx  SessionDrawer.tsx  Sigil.tsx  SkillRunOverlay.tsx  SkillRunProgress.tsx  StageChip.tsx  StatGrid.tsx  StreakCard.tsx  SubjectCard.tsx  SubjectLoopNav.tsx  SubmissionEditor.tsx  TutorPanel.tsx  ZenEditor.tsx  components.css
app/src/hooks/: useElapsed.ts  useResumeState.ts
app/src/lib/: engine.ts  golden-parity.test.ts  ipc.ts  lessonOutline.ts  markdownEdit.ts  notebookSearch.ts  placement.ts  query.ts  remediation.ts  slug.ts  types.ts  updates.ts  useSession.ts  useTutor.ts
app/src/routes/: Analytics.tsx  Assignments.tsx  Capstone.tsx  Dashboard.tsx  Diagnostics.tsx  Lessons.tsx  Notebook.tsx  NotebookGlobal.tsx  Placement.tsx  Reader.tsx  Review.tsx  Roadmap.tsx  Settings.tsx  SubjectWizard.tsx
app/src/stores/: useEngineStore.ts  useThemeStore.ts  useTutorStore.ts  useZenStore.ts
app/src/test/: fixtures.ts  setup.ts
app/src/theme/: ThemeProvider.tsx  loop.ts  primitives.css  stages.ts  tokens.almanac.css  tokens.aurelia-dark.css  tokens.bento-dark.css  tokens.bento.css  tokens.momentum.css  tokens.night.css  tokens.playful-dark.css  tokens.playful.css
site/: index.html  (+2 more)
(+80 files in other folders)
