[workspace]
members = ["crates/lyceum-core", "crates/lyceum-engine", "src-tauri"]
resolver = "2"

[workspace.package]
edition = "2021"
version = "0.1.0"
license = "MIT"
authors = ["Patryk Szakody <peto.szakodyn@gmail.com>"]

[profile.release]
strip = true
# "thin" LTO keeps almost all the size/speed win of full LTO with a far faster
# (and CI-tractable) final link than `lto = true`.
lto = "thin"
