[package]
name = "lyceum-app"
version = "0.1.2"
edition = "2021"
license = "MIT"
description = "Lyceum-App — desktop GUI over the Lyceum learning system."

[lib]
name = "lyceum_app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-updater = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
time = { version = "0.3", features = ["formatting"] }
lyceum-core = { path = "../crates/lyceum-core" }
lyceum-engine = { path = "../crates/lyceum-engine" }
tokio = { version = "1", features = ["sync"] }

[dev-dependencies]
tempfile = "3"

[features]
# this feature is used for production builds where `devPath` points to the
# filesystem dist directory instead of a dev server URL
custom-protocol = ["tauri/custom-protocol"]
