[package]
name = "lyceum-engine"
version = "0.1.0"
edition = "2021"
license = "MIT"
description = "Claude stream-json subprocess bridge for Lyceum-App: spawn, isolate, parse, drive turns."

[dependencies]
lyceum-core = { path = "../lyceum-core" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
async-trait = "0.1"
time = { version = "0.3" }
# Cross-platform binary resolution + path simplification (Windows claude.exe/.cmd +
# stripping the `\\?\` verbatim prefix that std::fs::canonicalize produces).
which = "7"
dunce = "1"
tokio = { version = "1", features = [
  "process",
  "io-util",
  "macros",
  "rt",
  "rt-multi-thread",
  "time",
  "sync",
] }

[dev-dependencies]
tempfile = "3"
tokio = { version = "1", features = ["full"] }
